# trilha_dados_jr_codigo_certo_coders

./: pyproject.toml  requirements.txt
src/: etl.ipynb
utils/: data.txt
