[tool.poetry]
name = "trilha-dados-jr-codigo-certo-coders"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonfeitosa@goiania.go.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
